--- a/Setup_CVaaS/vars/CVP_Model-new.yml
+++ b/Setup_CVaaS/vars/CVP_Model-new.yml
@@ -26,22 +26,22 @@ cvaas_configlets:
   Leaf12-BASE: "{{ lookup('file', '../configlets/Leaf12-BASE.cfg') }}"
   Leaf21-BASE: "{{ lookup('file', '../configlets/Leaf21-BASE.cfg') }}"
   Leaf22-BASE: "{{ lookup('file', '../configlets/Leaf22-BASE.cfg') }}"
-  P1-BASE: "{{ lookup('file', '../configlets/P1-BASE.cfg') }}"
-  P2-BASE: "{{ lookup('file', '../configlets/P2-BASE.cfg') }}"
+  P5-BASE: "{{ lookup('file', '../configlets/P5-BASE.cfg') }}"
+  P6-BASE: "{{ lookup('file', '../configlets/P6-BASE.cfg') }}"
   P10-BASE: "{{ lookup('file', '../configlets/P10-BASE.cfg') }}"
   P11-BASE: "{{ lookup('file', '../configlets/P11-BASE.cfg') }}"
   P20-BASE: "{{ lookup('file', '../configlets/P20-BASE.cfg') }}"
   P21-BASE: "{{ lookup('file', '../configlets/P21-BASE.cfg') }}"
+  R1-PE1-BASE: "{{ lookup('file', '../configlets/R1-PE1-BASE.cfg') }}"
+  R2-PE2-BASE: "{{ lookup('file', '../configlets/R2-PE2-BASE.cfg') }}"
+  P1-BASE: "{{ lookup('file', '../configlets/P1-BASE.cfg') }}"
+  P2-BASE: "{{ lookup('file', '../configlets/P2-BASE.cfg') }}"
+  P3-BASE: "{{ lookup('file', '../configlets/P3-BASE.cfg') }}"
+  P4-BASE: "{{ lookup('file', '../configlets/P4-BASE.cfg') }}"
   PE1-BASE: "{{ lookup('file', '../configlets/PE1-BASE.cfg') }}"
   PE2-BASE: "{{ lookup('file', '../configlets/PE2-BASE.cfg') }}"
-  PE11-BASE: "{{ lookup('file', '../configlets/PE11-BASE.cfg') }}"
-  PE12-BASE: "{{ lookup('file', '../configlets/PE12-BASE.cfg') }}"
-  PE21-BASE: "{{ lookup('file', '../configlets/PE21-BASE.cfg') }}"
-  PE22-BASE: "{{ lookup('file', '../configlets/PE22-BASE.cfg') }}"
-  R1-P11-BASE: "{{ lookup('file', '../configlets/R1-P11-BASE.cfg') }}"
-  R1-P12-BASE: "{{ lookup('file', '../configlets/R1-P12-BASE.cfg') }}"
-  R2-P31-BASE: "{{ lookup('file', '../configlets/R2-P31-BASE.cfg') }}"
-  R2-P32-BASE: "{{ lookup('file', '../configlets/R2-P32-BASE.cfg') }}"
+  PE3-BASE: "{{ lookup('file', '../configlets/PE3-BASE.cfg') }}"
+  PE4-BASE: "{{ lookup('file', '../configlets/PE4-BASE.cfg') }}"
   RR-BASE: "{{ lookup('file', '../configlets/RR-BASE.cfg') }}"
   RR1-BASE: "{{ lookup('file', '../configlets/RR1-BASE.cfg') }}"
   RR2-BASE: "{{ lookup('file', '../configlets/RR2-BASE.cfg') }}"
