--- a/Setup_CVaaS/configlets/H14-BASE.cfg
+++ b/Setup_CVaaS/configlets/H14-BASE.cfg
@@ -8,3 +8,22 @@ interface Management 1
 !
 ip routing
 !
+management ssh
+   vrf VRF_A
+      no shutdown
+   !
+   vrf default
+      no shutdown
+!
+management telnet
+   no shutdown
+   !
+   vrf MGMT
+      no shutdown
+   !
+   vrf VRF_A
+      no shutdown
+   !
+   vrf default
+      no shutdown
+!
