--- a/Setup_CVaaS/vars/CVP_Model.yml
+++ b/Setup_CVaaS/vars/CVP_Model.yml
@@ -1,5 +1,5 @@
 cvaas_configlets:
-
+#some comment
   ATD-INFRA: "{{ lookup('file', '../configlets/ATD-INFRA.cfg') }}"
   Edge10-BASE: "{{ lookup('file', '../configlets/Edge10-BASE.cfg') }}"
   Edge11-BASE: "{{ lookup('file', '../configlets/Edge11-BASE.cfg') }}"
