--- a/Setup_CVaaS/configlets/Edge10-CVP.cfg
+++ b/Setup_CVaaS/configlets/Edge10-CVP.cfg
@@ -17,7 +17,6 @@ interface Ethernet3
    no shutdown
    mtu 1500
    no switchport
-   vrf VRF_A
    ip address 192.10.31.1/24
 !
 interface Ethernet4
@@ -46,16 +45,17 @@ router bgp 65000
    neighbor 192.10.15.2 allowas-in 6
    neighbor 192.10.16.2 remote-as 65103
    neighbor 192.10.16.2 allowas-in 6
+   neighbor 192.10.31.2 remote-as 65000
+   neighbor 192.10.31.2 allowas-in 6
    !
    address-family ipv4
       neighbor 192.10.15.2 activate
       neighbor 192.10.16.2 activate
+      neighbor 192.10.31.2 activate
       network 192.168.0.10/32
       redistribute connected
    !
    vrf VRF_A
-      neighbor 192.10.31.2 remote-as 65000
-      neighbor 192.10.31.2 allowas-in 6
       network 192.168.0.10/32
       redistribute connected
 !
